--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,19 @@
   <version>1.0-SNAPSHOT</version>
   <name>sorken Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
+
+
   <dependencies>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
         <groupId>javax.websocket</groupId>
@@ -26,19 +32,20 @@
     	<artifactId>gson</artifactId>
     	<version>2.8.0</version>
     </dependency>
-
     <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>javax.servlet.jsp-api</artifactId>
-      <version>2.3.1</version>
-      <scope>provided</scope>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
+
+    <!--<dependency>-->
+    <!--<groupId>javax.servlet.jsp</groupId>-->
+    <!--<artifactId>javax.servlet.jsp-api</artifactId>-->
+    <!--<version>2.3.1</version>-->
+    <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+
 
     <dependency>
       <groupId>junit</groupId>
